Create landing page
Created the first landing page

--- a/index.html
+++ b/index.html
@@ -11,17 +11,19 @@
     </head>
 
     <body>
-        <header>
-
-        </header>
-
         <main>
+            <h1>Wishing<span>To</span></h1>
 
+            <div class="description">
+                <h2>Welcome!</h2>
+                <p>All your wishing lists in a simple way.</p>
+            </div>
+
+            <div class="buttons">
+                <a href="#" id="sign-in-button">sign in</a>
+                <a href="#" id="sign-up-button">sign up</a>
+            </div>
         </main>
-
-        <footer>
-
-        </footer>
         
         <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
         <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
