--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
             <div class="buttons">
                 <a href="./pages/sign-in.html" id="sign-in-button">sign in</a>
-                <a href="#" id="sign-up-button">sign up</a>
+                <a href="./pages/sign-up.html" id="sign-up-button">sign up</a>
             </div>
         </main>
         
