--- a/pages/sign-up.html
+++ b/pages/sign-up.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>WishingTo - Sign In</title>
+        <title>WishingTo - Sign Up</title>
 
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <link rel="stylesheet" type="text/css" href="../CSS/sign-in.css">
+        <link rel="stylesheet" type="text/css" href="../CSS/sign-up.css">
     </head>
 
     <body>
@@ -17,17 +17,17 @@
             <div class="account">
                 <form method="get" action="../pages/user-list.html">
                     <div class="container-email">
-                        <input type="email" name="email" placeholder="Email" id="email">
+                        <input type="email" name="email" placeholder="Create Email" id="email">
                     </div>
 
                     <div class="container-password">
-                        <input type="password" name="password" placeholder="Password" id="password">
+                        <input type="password" name="password" placeholder="Create Password" id="password">
                     </div>
 
-                    <input type="button" name="sign-in" value="sign-in" onclick="signIn()" id="sign-in-button">
+                    <input type="button" name="sign-up" value="sign-up" onclick="signUp()" id="sign-up-button">
                 </form>
 
-                <p>Don't have an account? <a href="./sign-up.html">Sign up</a></p>
+                <p>Already have an account? <a href="./sign-in.html">Sign in</a></p>
             </div>
         </main>
         
