--- a/pages/sign-in.html
+++ b/pages/sign-in.html
@@ -12,7 +12,7 @@
 
     <body>
         <main>
-            <h1>Wishing<span>To</span></h1>
+            <a href="../index.html"><h1>Wishing<span>To</span></h1></a>
 
             <div class="account">
                 <form method="get" action="../pages/user-list.html">
