--- a/pages/sign-up.html
+++ b/pages/sign-up.html
@@ -35,6 +35,6 @@
         <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
         <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
         <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
-        <script src="scripts/app.js"></script>
+        <script src="../scripts/app.js"></script>
     </body>
 </html>
