--- a/pages/sign-up.html
+++ b/pages/sign-up.html
@@ -15,17 +15,15 @@
             <a href="../index.html"><h1>Wishing<span>To</span></h1></a>
 
             <div class="account">
-                <form method="get" action="../pages/user-list.html">
-                    <div class="container-email">
-                        <input type="email" name="email" placeholder="Create Email" id="email">
-                    </div>
+                <div class="container-email">
+                    <input type="email" name="email" placeholder="Create Email" id="email">
+                </div>
 
-                    <div class="container-password">
-                        <input type="password" name="password" placeholder="Create Password" id="password">
-                    </div>
+                <div class="container-password">
+                    <input type="password" name="password" placeholder="Create Password" id="password">
+                </div>
 
-                    <input type="button" name="sign-up" value="sign-up" onclick="signUp()" id="sign-up-button">
-                </form>
+                <input type="button" name="sign-up" value="sign-up" onclick="createUser()" id="sign-up-button">
 
                 <p>Already have an account? <a href="./sign-in.html">Sign in</a></p>
             </div>
@@ -36,5 +34,6 @@
         <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
         <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
         <script src="../scripts/app.js"></script>
+        <script src="../scripts/sign-up.js"></script>
     </body>
 </html>
