--- a/pages/my-wishlist.html
+++ b/pages/my-wishlist.html
@@ -12,7 +12,8 @@
 
     <body onload="fetchUserData()">
         <main>
-            My List
+            <h1>My List</h1>
+            <button id="logout" onclick="signOut()">Log Out</button>
         </main>
 
         <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
