--- a/pages/my-wishlist.html
+++ b/pages/my-wishlist.html
@@ -13,7 +13,7 @@
     <body onload="fetchUserData()">
         <main>
             <h1>My List</h1>
-            <button id="logout" onclick="signOut()">Log Out</button>
+            <button id="logout-button" onclick="signOut()">Log Out</button>
         </main>
 
         <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
