--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" type="text/css" href="./CSS/home.css">
     </head>
 
-    <body>
+    <body onload="verifyCurrentUser()">
         <main>
             <h1>Wishing<span>To</span></h1>
 
@@ -24,5 +24,11 @@
                 <a href="./pages/sign-up.html" id="sign-up-button">sign up</a>
             </div>
         </main>
+
+        <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
+        <script src="../scripts/app.js"></script>
     </body>
 </html>
