--- a/pages/my-wishlist.html
+++ b/pages/my-wishlist.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" type="text/css" href="../CSS/my-wishlist.css">
     </head>
 
-    <body onload="fetchUserData()">
+    <body>
         <main>
             <h1>My List</h1>
             <button id="logout-button" onclick="signOut()">Log Out</button>
@@ -21,5 +21,6 @@
         <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
         <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
         <script src="../scripts/app.js"></script>
+        <script src="../scripts/my-wishlist.js"></script>
     </body>
 </html>
