--- a/pages/my-wishlist.html
+++ b/pages/my-wishlist.html
@@ -25,9 +25,11 @@
             <div class="empty-list">
                 <h2>Create a category!</h2>
             </div>
+
+            <div class="items-list"></div>
         </main>
 
-        <footer onclick="showCreateWindow()">
+        <footer onclick="openCreateWindow()">
             <i class="fa-solid fa-plus fa-lg"></i>
         </footer>
 
@@ -40,13 +42,23 @@
 
         <div class="create-popup">
             <div class="create-menu">
-
+                <input type="text" id="category-name">
+                <textarea type="text" id="category-description"></textarea>
 
 
                 <div class="create-menu-buttons">
-                    <button id="cancel-button" onclick="cancelCreation()">Cancel</button>
+                    <button id="cancel-button" onclick="closeCreateWindow()">Cancel</button>
                     <button id="create-button" onclick="createCategory()">Create</button>
                 </div>
+            </div>
+        </div>
+
+        <div class="delete-popup">
+            <div class="delete-menu">
+                <p>This action cannot be undone!</p>
+
+                <button id="cancel-delete" onclick="closeDeleteConfirmation()">cancel</button>
+                <button id="confirm-delete" onclick="deleteCategory()">delete</button>
             </div>
         </div>
 
