Create Menu style
Added style o the create menu

--- a/pages/my-wishlist.html
+++ b/pages/my-wishlist.html
@@ -42,9 +42,16 @@
 
         <div class="create-popup">
             <div class="create-menu">
-                <input type="text" id="category-name">
-                <textarea type="text" id="category-description"></textarea>
+                <h2>New Category</h2>
+                <hr>
 
+                <div class="upload-photo">
+                    <i class="fa-solid fa-image fa-3x"></i>
+                </div>
+
+                <input type="text" id="category-name" placeholder="Category Name">
+
+                <textarea type="text" id="category-description" placeholder="Add a description!"></textarea>
 
                 <div class="create-menu-buttons">
                     <button id="cancel-button" onclick="closeCreateWindow()">Cancel</button>
