Added Image Uploader
Made the aesthetic part of the img uploader. With image preview and everything

--- a/pages/my-wishlist.html
+++ b/pages/my-wishlist.html
@@ -47,6 +47,7 @@
 
                 <div class="upload-photo">
                     <i class="fa-solid fa-image fa-3x"></i>
+                    <input type="file" id="image-input">
                 </div>
 
                 <input type="text" id="category-name" placeholder="Category Name">
