--- a/pages/my-destinations.html
+++ b/pages/my-destinations.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>My WishList</title>
+        <title>My Destinations</title>
 
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <link rel="stylesheet" type="text/css" href="../CSS/my-wishlist.css">
+        <link rel="stylesheet" type="text/css" href="../CSS/my-destinations.css">
         <script src="https://kit.fontawesome.com/6e389afd81.js" crossorigin="anonymous"></script>
     </head>
 
@@ -75,6 +75,6 @@
         <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
         <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
         <script src="../scripts/app.js"></script>
-        <script src="../scripts/my-wishlist.js"></script>
+        <script src="../scripts/my-destinations.js"></script>
     </body>
 </html>
