--- a/pages/sign-in.html
+++ b/pages/sign-in.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>WishingTo - Sign In</title>
+        <title>NextEscapade - Sign In</title>
 
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
