--- a/pages/my-destinations.html
+++ b/pages/my-destinations.html
@@ -13,7 +13,7 @@
 
     <body>
         <header>
-            <h1>Wishing<span>To</span></h1>
+            <h1>NextEscapade</h1>
 
             <div class="user-information">
                 <span id="username"></span>
@@ -23,7 +23,7 @@
 
         <main>
             <div class="empty-list">
-                <h2>Create a category!</h2>
+                <h2>Add a destination!</h2>
             </div>
 
             <div class="items-list"></div>
@@ -42,7 +42,7 @@
 
         <div class="create-popup">
             <div class="create-menu">
-                <h2>New Category</h2>
+                <h2>New Destination</h2>
                 <hr>
 
                 <div class="upload-photo">
@@ -50,9 +50,7 @@
                     <input type="file" id="image-input">
                 </div>
 
-                <input type="text" id="category-name" placeholder="Category Name">
-
-                <textarea type="text" id="category-description" placeholder="Add a description!"></textarea>
+                <input type="text" id="category-name" placeholder="Destination Name">
 
                 <div class="create-menu-buttons">
                     <button id="cancel-button" onclick="closeCreateWindow()">Cancel</button>
