--- a/pages/my-destinations.html
+++ b/pages/my-destinations.html
@@ -15,10 +15,7 @@
         <header>
             <h1>NextEscapade</h1>
 
-            <div class="user-information">
-                <span id="username"></span>
-                <i class="fa-solid fa-user-astronaut fa-2xl" onclick="showMenu()"></i>
-            </div>
+            <i class="fa-solid fa-user-astronaut fa-xl" onclick="showMenu()"></i>
         </header>
 
         <main>
@@ -36,6 +33,7 @@
         <div class="logout-popup">
             <div class="logout-menu">
                 <i class="fa-solid fa-plus fa-lg" onclick="closeMenu()"></i>
+                <span id="username"></span>
                 <button id="logout-button" onclick="logOut()">Log Out</button>
             </div>
         </div>
